fix some spacing in header and about

--- a/styles/about.css
+++ b/styles/about.css
@@ -15,13 +15,13 @@ img {
   height: 50vh;
   object-fit: cover;
   object-position: 50% 35%;
-  margin: 1rem;
+  margin: 2vh 1vw;
   border-radius: 10px;
 }
 
 .interestBlurb {
   border-radius: 10px;
-  padding: 1rem;
-  margin: 2rem;
+  padding: 2vh 1vw;
+  margin: 6vh 2vw;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
