--- a/styles/header.css
+++ b/styles/header.css
@@ -1,6 +1,5 @@
 header {
-  font-size: 1.2rem;
-  padding: 2vh 1vw;
+  padding: 2vh 1rem;
   height: 6vh;
   display: flex;
   justify-content: space-between;
